--- a/desafiogenerations/src/main/resources/application.properties
+++ b/desafiogenerations/src/main/resources/application.properties
@@ -1,9 +1,6 @@
-spring.application.name=desafiogenerations
-jakarta.persistence.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://dpg-cqu50b3v2p9s73d0rpp0-a:5432/deploygeneration
-
-
+spring.application.name=salaDeAula
+spring.datasource.url=jdbc:h2:mem:planner
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jps.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.password=
+spring.datasource.username=sa
