Compilição das branches

--- a/desafiogenerations/src/main/resources/application.properties
+++ b/desafiogenerations/src/main/resources/application.properties
@@ -3,5 +3,8 @@ jakarta.persistence.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/deploygeneration
-spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.username=postgres
+spring.datasource.password=root
+# Variavel de ambiente com variavel fixa
+api.security.token.secret=${JWT_SECRET:12345678}
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
