Manutenção do Erro de Login

--- a/desafiogenerations/src/main/resources/application.properties
+++ b/desafiogenerations/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.password=root
 # Variavel de ambiente com variavel fixa
 api.security.token.secret=${JWT_SECRET:12345678}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# Retira o campo trace quando retorna erro
+server.error.include-stacktrace=never
