--- a/desafiogenerations/compose.yaml
+++ b/desafiogenerations/compose.yaml
@@ -5,8 +5,8 @@ services:
     image: 'postgres:latest'
     environment:
       - POSTGRES_DB=deploygeneration
-      - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
-      - POSTGRES_USER=${DATABASE_USERNAME}
+      - POSTGRES_PASSWORD=root
+      - POSTGRES_USER=postgres
     ports:
       - '5432:5432'
     volumes:
