--- a/desafiogenerations/src/main/resources/application.properties
+++ b/desafiogenerations/src/main/resources/application.properties
@@ -5,3 +5,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/deploygeneration
 spring.datasource.username=root
 spring.datasource.password=password
+
+
+# Variável de ambiente com valor fixo
+api.security.token.secret=${JWT_SECRET:12345678}
+
+# Retirar campo trace no retorno de erro
+server.error.include-stacktrace=never
