Melhoria no caching e centralização do hateoas

--- a/desafiogenerations/src/main/resources/application.properties
+++ b/desafiogenerations/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/deploygeneration
 spring.datasource.username=root
 spring.datasource.password=password
+#ver o jpa
+spring.jpa.show-sql=true
 
 
 # Variável de ambiente com valor fixo
