Alterações do segundo dia de testes

--- a/desafiogenerations/src/main/resources/application.properties
+++ b/desafiogenerations/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=desafiogenerations
 jakarta.persistence.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/deploygeneration
-spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.username=postgres
+spring.datasource.password=root
 #ver o jpa
 spring.jpa.show-sql=true
 
