--- a/desafiogenerations/src/main/resources/application.properties
+++ b/desafiogenerations/src/main/resources/application.properties
@@ -2,12 +2,9 @@ spring.application.name=desafiogenerations
 jakarta.persistence.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/deploygeneration
-spring.datasource.username=postgres
-spring.datasource.password=root
-#ver o jpa
-spring.jpa.show-sql=true
-
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.url=jdbc:postgresql://dpg-cqu50b3v2p9s73d0rpp0-a:5432/deploygeneration
 
 # Variável de ambiente com valor fixo
 api.security.token.secret=${JWT_SECRET:12345678}
