--- a/desafiogenerations/pom.xml
+++ b/desafiogenerations/pom.xml
@@ -112,10 +112,22 @@
 	</dependencies>
 	<build>
 		<plugins>
+			<!-- Plugin do Maven para garantir a codificação UTF-8 -->
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<configuration>
+					<encoding>UTF-8</encoding>
+				</configuration>
 			</plugin>
 		</plugins>
+
+		<resources>
+			<!-- Configuração para desativar o resource filtering -->
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>false</filtering>
+			</resource>
+		</resources>
 	</build>
 </project>
